updates to results

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -111,6 +111,7 @@ analyses. If applicable, describe which groupings were chosen and why
 Statistical methods
 -------------------
 
+computed CIs for OR using wald estimator. 
 <!-- 
 
 (a) Describe all statistical methods, including those used to control
@@ -185,13 +186,8 @@ over time -->
 Main results
 ------------
 
-The odds ratio for TRISS was `r t.or["or"]` (95% CI: `r t.or["5 %"]`-`r t.or["95 %"]`). When plotting the ROC, the AUC was `r t.auc` (95% CI: `r t.auc.ci[1]`-`r t.auc.ci[3]`).
+The odds ratio for TRISS was `r t.stats[['or']]` (95% CI: `r t.stats[['or.ci']]`, p-value: `r t.stats[['or.p']]`). When plotting the ROC, the AUC was `r t.stats[['auc']]` (95% CI: `r t.stats[['auc.ci']][1]`-`r t.stats[['auc.ci']][3]`). The odds ratio for NORMIT was `r n.stats[['or']]` (95% CI: `r n.stats[['or.ci']]`, p-value: `r n.stats[['or.p']]`). When plotting the ROC, the AUC was `r n.stats[['auc']]` (95% CI: `r n.stats[['auc.ci']][1]`-`r n.stats[['auc.ci']][3]`).
 
-Other analyses 
---------------
-
-<!-- Report other analyses done—eg analyses of subgroups and interactions,
-and sensitivity analyses -->
 
 Discussion
 ==========
