--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -3,12 +3,16 @@ title: 'Association between trauma severity models and opportunities for improve
   A retrospective cohort study'
 author: "Victoria Witthoff"
 output:
-  html_document: default
+  html_document:
+    df_print: paged
+    number_sections: true
   pdf_document: default
   word_document: default
 bibliography: bibliography.bib
 csl: vancouver.csl
-always_allow_html: true
+fontsize: 11pt
+linestretch: 1
+always_allow_html: yes
 editor_options: 
    chunk_output_type: inline
 ---
@@ -26,28 +30,63 @@ Abstract
 <!-- Provide in the abstract an informative and balanced summary of
 what was done and what was found. Not more than 300 words. -->
 
-Background
-----------
 
-Methods
--------
-
-Results
--------
-
-Conclusion
-----------
+Abbreviations
+=============
+* ASA-PS - American Society of Anesthesiology Physical Status
+* ISS - Injury Severity Score
+* KUH - Karolinska University Hospital
+* M&M - Morbidity and mortality
+* NISS - New Injury Severity Score
+* NORMIT - Norwegian Survival Prediction Model in Trauma
+* OFI - Opportunities for improvement
+* Ps - Probability of survival
+* QI - Quality Improvement
+* RTS - Revised Trauma Score
+* TRISS - Trauma and Injury Severity Score
+* WHO - World Health Organisation
 
 Introduction
 ============
+Trauma, defined as the clinical entity composed of physical injury and the body's associated response <!-- Martin cite -->, is one of the leading causes of death worldwide, constituting nearly 8% of global deaths annually [@whoepi]. The global health burden of trauma has led to it being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Non-fatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and health status in survivors of severe trauma [@globalburden; @longtermtrauma]. Improvements in trauma outcomes stand therefore to benefit a broader population by reducing the societal and healthcare costs of disability, not least in low- and middle-income countries. 
+
+<!-- S wants me to write about the UN 2030 goals here --> 
+
+Management of severe trauma is highly time-sensitive and is also dependent on the actions of a multidisciplinary chain of healthcare providers. Errors in management are a common cause of preventable deaths [@prevdeathsghorbani; @prevdeathsmontmany; @prevdeathsteixeira]. Outcomes in severe trauma are dependent on the quality of care received, and it has been shown in the US that trauma quality improvement (QI) programs improve outcomes [@ustqi]. Multiple tools and interventions have been developed for use in trauma QI programs, including morbidity and mortality conferences, audit filters, and statistical analysis [@hakkenbrakprevdeath]. However, the implementation of QI programs differs widely between clinics [@tqipanglo], with smaller, non-specialised hospitals tending to have less organised programs [@whoguidelines]. 
+
+## Trauma severity models
+Trauma as a clinical entity is highly heterogeneous due to the variety in its underlying causes, which affect both the type and severity of the injury. An important question for trauma QI programs to solve is how to evaluate and compare outcomes given the difficulties posed by the heterogeneity of trauma. This question has spurred the development of multiple trauma severity models. Trauma severity models attempt to translate the severity of physical injury into a quantitative value by using physiological and anatomical parameters as predictors of mortality. Trauma severity models were initially intended for use in prehospital triage, and therefore were simplistic by design for ease of use [@traumareview], but over the years newer and more advanced algorithms have been developed to fulfil the needs of research, quality assurance, and clinical triage [@traumareview]. Today there are hundreds of trauma severity models with differing methodology and the common aim of expressing trauma severity as a numerical value that either directly or indirectly represents the probability of survival (Ps). 
+
+Trauma severity models have become a cornerstone of modern trauma QI programs [@historytss]. One example of their use is highlighting unexpectedly high mortality rates amongst patients with a high Ps [@whoguidelines]. Trauma severity models also allow clinics to compare their outcomes against an established benchmark [@whoguidelines]. However, an inherent weakness of any trauma severity model is that estimates may be unreliable when applied to a population different from the one the model was developed from. Trauma type and severity will differ between locales and trauma patient populations can be difficult to compare between disparate geographical regions [@assessingquality]. This weakness is one reason why models continue to be developed and improved on. Another reason is that efforts to establish which risk factors best predict mortality are still ongoing; different models use different physiological and anatomical parameters.  
+
+The Trauma and Injury Severity Score (TRISS), first developed in the US in 1987 [@triss] and most recently updated in 2010 [@triss2010], is the most used model worldwide [@trissbetter]. TRISS is a combination index that incorporates patient age, the Injury Severity Score (ISS), the Revised Trauma Score (RTS), and whether the injury was blunt or penetrating [@triss]. The resulting value is a percentage that estimates the probability of survival (Ps). The ISS gives a score based on the three anatomical regions with the most severe injury. A limitation of the ISS is that it doesn't account for situations where one anatomical region has multiple injuries [@trissbetter]. The RTS is based on the physiological parameters GCS, systolic blood pressure, and respiratory rate. The GCS cannot be estimated in situations where the patient has already been intubated, since a valid verbal score cannot be ascertained, which gives TRISS limited value in estimating Ps in certain populations [@trissbetter]. 
+
+In 2014 researchers in Norway released a new model, the Norwegian Survival Prediction Model in Trauma (NORMIT), that attempts to address the weaknesses of TRISS and simultaneously provide a model based on Norwegian patient populations [@normit]. NORMIT is based on the patient's age, New Injury Severity Score (NISS), comorbidities prior to traumatic injury based on the ASA physical status classification system (ASA-PS), and their RTS. NISS differs from ISS in that NISS allows for scoring of multiple injuries within the same anatomical region. Validation of NISS has shown that NISS is better at predicting mortality in trauma patients compared to ISS, especially in patients with multiple severe injuries within one anatomical region [@nissbetter]. NORMIT also provides a method to incorporate the GCS for intubated patients when calculating RTS. For patients who arrive at hospital and under general anaesthesia, the RTS is calculated based on the prehospital value prior to intubation [@normit]. NORMIT was updated in 2018 [@skagaValidatingPerformanceTRISS2018] and a validation study at this institution found that the updated NORMIT reliably predicted survival at a Swedish trauma centre but both the old and new versions of NORMIT performed worse when applied to the entire national population [@validationnormit]. 
+
+## Morbidity and mortality conferences
+
+The gold standard of trauma QI programs worldwide are multidisciplinary morbidity and mortality (M&M) conferences. M&M conferences review selected patient cases, attempt to establish whether there were opportunities for improvement (OFI) in each specific case, and, where necessary, implement corrective actions. The occurrence of OFI function in this manner as a proxy for incidence of suboptimal care and preventable deaths. The WHO guidelines for trauma quality improvement programmes recommend regularly scheduled multidisciplinary conferences and give specific recommendations as to their structure and format [@whoguidelines]. Despite these  recommendations, there is a still a great degree of variation amongst clinics in how M&M conferences are carried out, with a significant number of clinics still using an informal and unstructured format [@tqipanglo]. The World Health Organisation (WHO) themselves note in their guidelines that M&M conferences are not used to their fullest potential globally [@whoguidelines]. 
+
+The value of M&M conferences in long-term quality improvement is largely dependent on selection of appropriate cases for review. In an ideal world, only cases that were actually mismanaged would be selected for review; this is, of course, an impossible ideal as it cannot be known whether a case was mismanaged prior to it being reviewed. This reliance on case selection is a weakness of M&M review and has led to considerable efforts to develop strategies to standardise case selection [@tqipanglo]. The benefit of standardising case selection is twofold; it could increase identification of the cases that are most likely to have been mismanaged, and it could also save resources in the form of work hours. The latter benefit is not insignificant considering the large caseload found in many urban trauma centres. Despite this, the process by which patient cases are selected for M&M review differs between clinics and case selection is often non-standardised [@mmreview; @tqipanglo]. 
+
+The WHO recommends that all "deaths, complications, adverse events and errors" should be reviewed [@whoguidelines]. Some clinics have already made efforts to standardise case election; for example, by using quality indicators, or audit filters, to flag cases for inclusion in M&M conferences [@tqipanglo; @developqi]. Examples of quality indicators include time to first medical contact, adverse event rate, and mortality rate [@developqi].
+
+## Trauma severity models as quality indicators
+
+Another potential audit filter for M&M review, that is already used at some clinics [@whoguidelines], is trauma severity scoring. However, the extent to which trauma severity models are associated with or can predict OFI as found in M&M conferences is not well understood. A study at this institution found that neither NORMIT nor TRISS were able to reliably discriminate between preventable and non-preventable deaths [@prevdeathsghorbani]. However, that study included only deaths and not other morbidities and thereby had a low sample size. It is not known whether trauma severity models have better performance when applied to the entire population of trauma patients. 
+
+If it could be found that an existing trauma severity model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. Conversely, if trauma severity models are not associated with OFI, using trauma severity models as audit filters may result in cases being unnecessarily flagged for review and in doing so waste conference resources. 
+
+There are far more trauma severity models than the two described above. These two models are of interest for specific reasons: TRISS is the most widely used model and NORMIT is based on a Scandinavian population, which is where this institution is located. It seems reasonable to begin by investigating these two models. 
+
+<!-- S says to clarify the knowledge gap & motive --> 
+
+## Aim
+The aim of this study is to evaluate how the trauma severity models TRISS and NORMIT are associated with and to what extent they can predict opportunities for improvement.
 
 
-
-<!-- Explain the scientific background and rationale for the
-investigation being reported. End by stating the aim or specific
-objectives, including any prespecified hypotheses. The introduction
-should not be longer than 1-1.5 pages, typically 4-5 paragraphs, each
-6-8 lines long. Support every statement with a citation -->
+Methods 
+=======
 
 Methods 
 =======
@@ -55,13 +94,21 @@ Methods
 Study design
 ------------
 
-<!-- Present key elements of study design -->
+This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry and the trauma care quality database. The trauma care quality database is a subset of the trauma registry and contains data on trauma patients who were selected for M&M reviews. These two databases will be linked and then analysed to estimate the association between the common trauma severity models TRISS and NORMIT and OFI using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
 
 Setting
 -------
 
 <!-- Describe the setting, locations, and relevant dates, including
 periods of recruitment, exposure, follow-up, and data collection -->
+
+KUH is located in Solna, Sweden. KUH's trauma centre is equivalent to a level 1 trauma centre according to American College of Surgeons standards [@nksstats]. KUH is the primary trauma centre for the region of Stockholm and also has agreements with several other regions to provide trauma care for patients with severe trauma. KUH is thereby the major trauma centre for a population of almost 3 million people [@nksstats]. 
+
+The trauma registry at KUH is also submitted to SweTrau, Sweden's national trauma registry, and thereby follows SweTrau guidelines. The inclusion criteria are given below. All trauma patients meeting the inclusion criteria are registered in the trauma registry by nurses at the trauma clinic. Data is collected from the patient's electronic medical records. The database contains data on patients from 2012 to 2021. 
+
+SweTrau follows the Utstein Trauma Template for reporting of data following major trauma. The registered data includes prehospital vital signs and management, vital signs and management on arrival at hospital, information about the type of injury, and the primary method of treatment. Follow-up variables include, but are not limited to, survival at 30 days, days in ventilator, GCS at discharge, highest level of care, and transfers to other units.
+
+The trauma care quality database is an internal hospital register and registers the outcome of M&M conferences. Each case reviewed is registered in the trauma care quality register with data about the outcome of the review. The database contains data on patients from 2014 to 2021. 
 
 Participants
 ------------
@@ -84,73 +131,73 @@ The trauma care quality database contains patients from the trauma registry that
 ### Study-specific exclusion criteria
 Patients <15 years of age were excluded as paediatric trauma is a separate clinical entity. Patients that were dead on arrival were also excluded. In addition, this is a complete case study and all patients that lacked parameters necessary to carry out the analysis were excluded. 
 
-Variables and data sources/measurements
----------------------------------------
+Variables
+---------
 
 <!-- Clearly define all outcomes, exposures, predictors, potential
 confounders, and effect modifiers. Give diagnostic criteria, if
 applicable. For each variable of interest, give sources of data and
 details of methods of assessment (measurement). Describe comparability
 of assessment methods if there is more than one group -->
+### Outcome
+The studied outcome is the binary variable "opportunities for improvement" (OFI), as identified by the multidisciplinary M&M conference at KUH. OFI is coded as either "Yes - at least one opportunity for improvement identified" or "No - no opportunities for improvement identified". 
+
+### Exposures
+The primary exposures of interest are the trauma severity models TRISS and NORMIT. Both of these models estimate the Ps. This is expressed a probability and is a continuous variable. The variables integrated into these models are taken from arrival at hospital. 
+
+#### TRISS
+
+The TRISS model incorporates patient age, Injury Severity Score (ISS), Revised Trauma Score (RTS), and whether the trauma was blunt or penetrating. 
+
+The ISS is given by estimating the severity of physical injuries by anatomical region. Severity is assessed on a seven-point scale from "No injury" to "Unsurvivable injury". The values from the three anatomical regions with the most severe injury are combined into a score that is given is points on a scale from 0 to 75. The RTS is based on physiological parameters GCS, systolic blood pressure, and respiratory rate. Values are taken from arrival at hospital. These parameters are weighted and expressed in a score from 0 to 8, where a lower score indicates more severe injury. 
+
+#### NORMIT
+
+The NORMIT model incorporates the patient's age, New Injury Severity Score (NISS), comorbidities prior to traumatic injury based on the ASA physical status classification system (ASA-PS), and their RTS. 
+
+NISS is based on the same variables as ISS. It differs from ISS in that it takes into account multiple injuries within one anatomical region and calculates a score based on the three most severe injuries regardless of anatomical region. 
 
 Bias 
 ----
 
 <!-- Describe any efforts to address potential sources of bias -->
 
+The method and data analysis model will be written using simulated data to reduce the risk of research bias. Real-world data will only be used once the data analysis model is completed and found to work correctly on simulated data. 
+
 Study size 
 ----------
 
 <!-- Explain how the study size was arrived at -->
 
+Since all eligible participants must exist in both the trauma registry and the trauma care quality database, and the trauma care quality database is a subset of the trauma registry, the maximum number of participants is limited to the number of cases registered in the trauma care quality database. The trauma care quality database includes around 2200 patients who were selected for review between 2014 and 2021. In order to establish the exact study size, the study-specific exclusion criteria need to first be applied. The exact study size has not yet been established at the time of writing this report. 
+
 Quantitative variables
 ----------------------
 
-<!-- Explain how quantitative variables were handled in the
-analyses. If applicable, describe which groupings were chosen and why
--->
+NORMIT and TRISS will be calculated using the following variables from the trauma registry database: ISS, NISS, RTS, GCS, systolic blood pressure, respiratory rate, ASA, and age. The scores will be calculated according to the formulas given by the respective developers of each model. 
 
 Statistical methods
 -------------------
 
-computed CIs for OR using wald estimator. 
-<!-- 
+R, a programming language for statistical computing, will be used for compilation and analysis of data. Conversion and handling of variables will be carried out according to the SweTrau manual. In cases where data necessary for analysis is missing, i.e. the variables referred to above, the participant will be excluded from the study. Logistic regression will be used to determine association between the estimates of the trauma severity models and OFI. To assess how well the models predict OFI measures of discrimination and calibration will be used. Results will be presented with a confidence interval of 95%. A p-value of <0.05 will be considered significant. 
 
-(a) Describe all statistical methods, including those used to control
-for confounding
 
-(b) Describe any methods used to examine subgroups and interactions
+<!-- computed CIs for OR using wald estimator. -->
 
-(c) Explain how missing data were addressed 
+Ethical considerations
+==========
 
-(d) 
+All patient information used in this study is anonymised and stored in a secure database. Patient medical records will not be accessed. Patients were not asked to give consent for inclusion in the KUH trauma registry. The ability and ethical approval to collect patient data for this registry without pre-emptively asking for patient consent is well-established, as collecting this data is deemed to be in the public interest according to article 6.1 e of GDPR regulations. Collecting data is in the public interest due to the fact that this patient register is used to improve management of trauma, which is a leading cause of death. Patients have the right to be removed from the register on request. They also have the right to a copy of data that is stored about them on request. <!-- https://meetings.lg.se/pdfFile/pdfFile.aspx?objectID=%2F7Iqgtt89nW2zhRjMSNZ%2Fw%3D%3D --> 
 
-Cohort study: If applicable, explain how loss to follow-up was addressed 
+This project is a retrospective cohort study and the project has thereby had no effect on patient treatment. There is no risk that patients are harmed by inclusion in the study. This study has the potential to improve patient care by analysing a potential factor that could predict suboptimal trauma care. It is true that the patient population for this study includes vulnerable populations, such as the deceased and the severely injured, but this is justified by the fact that this population stands to gain the most from improved trauma care.
 
-Case-control study:If applicable, explain how matching of cases and
-controls was addressed
-
-Cross-sectional study: If applicable, describe analytical methods
-taking account of sampling strategy
-
-(e) Describe any sensitivity analyses
--->
+**Stockholm Research Ethics Review Board approval number 2021-02541 and 2021-03531.**
 
 Results
 =======
 
 Participants
 ------------
-<!-- 
-(a) Report numbers of individuals at each stage of study—eg numbers
-potentially eligible, examined for eligibility, confirmed eligible,
-included in the study, completing follow-up, and analysed
-
-(b) Give reasons for non-participation at each stage
-
-(c) Consider use of a flow diagram
-
--->
 A total of `r counts[6,3]` patients were excluded during processing of data. `r counts[2,3]` patients were excluded due to not having a recorded outcome from an M&M conference. `r counts[3,3]` patients were excluded for being under 15 years of age. `r counts[4,3]` patients were excluded due to being dead on arrival at hospital. `r counts[5,3]` patients were excluded due to missing required data. Figure 2 shows the selection process for eligible participants. 
 
 ```{r, echo = FALSE}
@@ -159,18 +206,6 @@ A total of `r counts[6,3]` patients were excluded during processing of data. `r 
 
 Descriptive data
 ----------------
-
-<!--
-(a) Give characteristics of study participants (eg demographic,
-clinical, social) and information on exposures and potential
-confounders
-
-(b) Indicate number of participants with missing data for each
-variable of interest
-
-(c) Cohort study — Summarise follow-up time (eg, average and total
-amount) -->
-
 A total of `r counts[5,2]` participants were identified as eligible for inclusion. Their demographical and clinical characteristics are described in Table 1. `r numbers['ofi.true']` cases had at least one OFI and `r numbers['ofi.false']` cases had no OFI. The mean age for all patients was `r numbers['mean.age']` and `r numbers['pc.male']`% were male. 
 
 For patients with at least one OFI, the mean TRISS score was `r numbers['t.ofi.t']` and the mean NORMIT score was `r numbers['n.ofi.t']`. For patients with no OFI, the mean TRISS score was `r numbers['t.ofi.f']` and the mean NORMIT score was `r numbers['n.ofi.f']`.  
