Comment on manuscript and add citation to bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,13 @@
+@Book{Gerdin2015,
+  author = 	 {Gerdin, Martin},
+  title = 	 {The risk of dying: predicting trauma mortality in urban Indian hospitals},
+  publisher = 	 {Karolinska Institutet},
+  year = 	 {2015},
+  url = 	 {http://hdl.handle.net/10616/44832},
+  isbn = 	 {978-91-7676-157-1},
+  file = {[[file:~/projects/bibliography/papers/Gerdin2015.pdf]]}
+}
+
 @online{whoepi,
     author        =   "WHO",
     title         =   "Injuries and violence",
